--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     <div class="row g-5 align-items-center mb-5 pb-5" data-aos="fade-up">
       <div class="col-lg-6 order-2 order-lg-2">
-        <div class="image-wrapper">
+        <div class="image-wrapper" style="box-shadow: none!important;">
           <img src="assets/img/primate.png" alt="The Primate Portal" class="main-client-img">
         </div>
       </div>
