--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <style> 
 
+</style>
 </head>
 
 <body class="index-page">
@@ -273,19 +275,101 @@
 </div>
 
       <!-- RIGHT: STACKED IMAGES -->
-      <div class="col-lg-6 px-lg-4" data-aos="fade-left">
-        <div class="image-stack">
+<!-- RIGHT: CAROUSEL -->
+<div class="col-lg-6 px-lg-4" data-aos="fade-left">
+  <div id="deliverablesCarousel" class="carousel slide deliverables-carousel" data-bs-ride="carousel" data-bs-interval="4500">
+    
+    <!-- indicators -->
+<!--     <div class="carousel-indicators">
+      <button type="button" data-bs-target="#deliverablesCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#deliverablesCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#deliverablesCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+ -->
+    <!-- slides -->
+    <div class="carousel-inner">
 
-          <div class="stack-card card-1">
-            <img src="assets/img/new.png" alt="Robotic Dispenser Prototype">
-          </div>
+      <div class="carousel-item active">
+        <img src="assets/img/new.png" class="d-block w-100" alt="Robotic Dispenser Prototype">
+        <div class="carousel-caption">
+          <h5>Robotic Dispenser Prototype</h5>
+          <p>Pallet-based reward delivery designed for consistent behavioral reinforcement.</p>
+        </div>
+      </div>
 
-          <div class="stack-card card-2">
-            <img src="assets/img/new2.png" alt="Engineering Assembly">
-          </div>
+      <div class="carousel-item">
+        <img src="assets/img/new2.png" class="d-block w-100" alt="Engineering Assembly">
+        <div class="carousel-caption">
+          <h5>Engineering Assembly</h5>
+          <p>Installed setup supporting scalable data collection in real-world environments.</p>
+        </div>
+      </div>
 
-          <div class="stack-card card-3">
-            <img src="assets/img/new3.png" alt="Deployed Research System">
+      <div class="carousel-item">
+        <img src="assets/img/new3.png" class="d-block w-100" alt="Deployed Research System">
+        <div class="carousel-caption">
+          <h5>Deployed Research System</h5>
+          <p>Built hardware integration with sensor-based interaction logic.</p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#deliverablesCarousel" data-bs-slide="prev" aria-label="Previous">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#deliverablesCarousel" data-bs-slide="next" aria-label="Next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </button>
+
+  </div>
+</div>
+
+
+    </div>
+  </div>
+</section>
+
+<section id="contact" class="contact-modern section">
+  <div class="container">
+
+    <div class="section-title-universal mx-auto text-center" data-aos="fade-down" data-aos-delay="100">
+      <span class="sub-badge-alt">Contact</span>
+      <h2 class="title-display">Contact Me</h2>
+      <div class="title-divider"></div>
+      <p class="title-lead">For more information about my work</p>
+    </div>
+
+    <div class="row g-5 align-items-center mt-4" data-aos="fade-up">
+
+      <!-- LEFT: Photo (matches your image-wrapper style) -->
+      <div class="col-lg-5">
+        <!-- <div class="image-wrapper contact-image-wrap"> -->
+          <img src="assets/img/chris.png" alt="Jun Won (Chris) Son" class="main-client-img contact-photo d-block mx-auto" style="width: 90%;">
+        <!-- </div> -->
+      </div>
+
+      <!-- RIGHT: Info (matches your feature list style) -->
+      <div class="col-lg-7">
+        <div class="content-wrapper contact-panel">
+          <h3 class="client-title" style="margin-bottom:10px;">Jun Won (Chris) Son</h3>
+          <p class="about-text" style="margin-bottom:26px;">
+            If you’d like to learn more about Project 3Sigma or discuss collaboration, feel free to reach out.
+          </p>
+
+          <div class="modern-feature-list">
+            <div class="feature-item">
+              <div class="feature-icon"><i class="bi bi-envelope-fill"></i></div>
+              <div class="feature-text">
+                <h4>Email</h4>
+                <p style="margin:0;">
+                  <a class="contact-link" href="mailto:your.email@example.com">christopher200899@gmail.com</a>
+                </p>
+              </div>
+            </div>
+
           </div>
 
         </div>
@@ -294,6 +378,8 @@
     </div>
   </div>
 </section>
+
+
 
   </main>
 <footer class="site-footer">
